# ClawMarket

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  hardhat.config.js  package-lock.json  package.json  requirements.txt
.claude/: settings.json
contracts/: ClawCourtEscrow.sol
contracts/test/: MockERC20.sol
dashboard/hooks/: useDemoLoop.ts
dashboard/lib/: mockData.ts  types.ts
pipeline/: .env.production.example  agent-metadata.json  blockchain.py  clawup.config.json  clawup.json  deploy.sh  event_listener.py  health_check.py  log_writer.py  mock_events.py  openclaw_skill.py  pipeline.py  register_agent.py  stop.sh
pipeline/deployment/: mainnet.config.json  testnet.config.json
referee/: __init__.py  models.py  prompts.py  referee.py  test_referee.py
scripts/: create_wallet.js  demo.js  demo_interactive.js  deploy.js  preflight.js  register_agent_erc8004.js  smoke_test.js  transfer_ownership.js
shared/: contract_meta.json  log.json
teammate1-smart-contract/: CLAUDE.md  architecture.md
teammate2-openclaw-pipeline/: .env.example  .env.production.example  CLAUDE.md  SKILL.md  architecture.md  blockchain.py  clawup.sh  event_listener.py  log_writer.py  mock_events.py  openclaw_skill.py  pipeline.py  pyproject.toml  register_agent.py
teammate3-referee-ai/: CLAUDE.md  architecture.md  models.py  prompts.py  referee.py  test_referee.py
teammate4-live-ledger/: CLAUDE.md  architecture.md
teammate4-live-ledger/dashboard/: package-lock.json
teammate4-live-ledger/dashboard/TEAM_PROMPTS/: teammate2.md
test/: ClawCourtEscrow.test.js
(+4 files in other folders)
