[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clawcourt-pipeline"
version = "0.2.0"
description = "ClawCourt OpenClaw pipeline skill — escrow event listener and settler"
requires-python = ">=3.11"
dependencies = [
    "web3>=6.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
# Discovers any sub-packages if Teammate 3's refactor introduces them
where = ["."]
